<resources>
    <string name="app_name">Assignment</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_entry">Location Entry</string>
    <string name="existing_locations">Existing locations</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
</resources>